--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,4 +1,4 @@
-<p class="text-center text-xs text-zinc-700 dark:text-zinc-300 mt-16 pb-10">
+<p class="text-center text-xs text-text-muted mt-16 pb-10">
   Made with ❤️ by <a href="https://jose-donato.pages.dev" class="link"
     >José Donato</a
   >. <br />Open source on <a
