--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -77,7 +77,7 @@ const projectsWithStars = await Promise.all(
             projectsWithStars.map((project) => (
               <li class="card flex flex-col gap-2">
                 <h2 class="font-bold">{project.title}</h2>
-                <p class="rounded-full px-1.5 text-xs leading-normal bg-gray-100 dark:bg-gray-800 w-fit">
+                <p class="rounded-full px-1.5 text-xs leading-normal bg-bg-tertiary text-text-secondary w-fit">
                   {project.type}
                 </p>
                 <p class="text-sm">
