--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -13,9 +13,7 @@ import { Image } from "astro:assets";
       <span class="font-bold">José Donato</span>{" "}<span class="wave">👋</span
       >
     </h1>
-    <div
-      class="flex flex-col gap-1 text-sm text-zinc-500 dark:text-zinc-300 mt-4"
-    >
+    <div class="flex flex-col gap-1 text-sm text-text-muted mt-4">
       <p>
         I'm a Fullstack Engineer from Portugal, specializing in building tools
         for quants and traders. Currently leading web development at OpenBB,
@@ -52,7 +50,7 @@ import { Image } from "astro:assets";
     />
   </div>
 </div>
-<div class="h-[1px] w-full bg-zinc-600/30 dark:bg-zinc-300/50 my-4"></div>
+<div class="divider my-4"></div>
 <Floater />
 
 <style>
@@ -69,11 +67,16 @@ import { Image } from "astro:assets";
     width: 100%;
     height: 2px;
     background-image: linear-gradient(transparent, transparent),
-      linear-gradient(#155dfc, #155dfc);
+      linear-gradient(var(--bullish-500), var(--bullish-500));
     background-size: 100% 2px;
     background-position: 0 100%;
     background-repeat: no-repeat;
-    rotate: -2deg;
+    rotate: -1deg;
+    transition: all 0.3s ease;
+  }
+
+  .underline-animation:hover::after {
+    background-image: linear-gradient(transparent, transparent),
+      linear-gradient(var(--bullish-400), var(--bullish-400));
   }
 </style>
-
